# taste_auto_tagging_sandbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  app.py  env.yaml  pyproject.toml  setup.cfg
.github/workflows/: build_deploy.yml  nonprod_workflow.yml  setup_infra.yml  test.yml
config/: bq_table_entity_tag_prediction_evaluation_schema.json  bq_table_entity_tag_prediction_feedback_schema.json  bq_table_entity_tag_prediction_result_schema.json  bq_table_overall_evaluation_metrics_schema.json  bq_table_recipe_tag_taxonomy_schema.json
infra/environments/nonprod/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf  version.tf
infra/environments/prod/: backend.tf
infra/modules/artifact_registry/: main.tf  variables.tf
infra/modules/big_query_ds/: main.tf  variables.tf
infra/modules/big_query_table/: main.tf  variables.tf
infra/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infra/modules/cloud_storage/: main.tf  variables.tf
infra/modules/iam/: main.tf  variables.tf
src/: prompts.py  sql_queries.py  utils.py
src/llms/: gemini.py
src/recipe/: recipe_models.py  recipe_tagging.py
tagging/: Dockerfile  app.py
tagging/src/: bigquery_utils.py  config.py
tagging/src/llms/: gemini.py  llm_base.py
tagging/src/recipe/: evaluation.py  recipe_models.py  recipe_tagging.py
tagging/tests/: test_local_endpoints.py
test/: test.py
