[tool.poetry]
name = "taste_auto_tagging"
version = "0.1.0"
description = ""
authors = ["Cameron Goodhue <cameron.goodhue@news.com.au>"]
package-mode = false

[[tool.poetry.source]]
name = "standard"
url = "https://pypi.org/simple"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-aiplatform = "^1.73.0"
pytz = "^2024.2"
types-pytz = "^2024.2.0.20241003"
python-dotenv = "^1.0.1"
nltk = "^3.9.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
spacy = "^3.8.2"
google-cloud-logging = "^3.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pre-commit = "^3.2.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"
ipykernel = "^6.22.0"
black = "^22.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "5.0.4"
poethepoet = "^0.19.0"
pytest-mock = "^3.10.0"
types-requests = "^2.32.0.20240907"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest tests"
quality = "pre-commit run --all-files"
